--- a/01_CNN_Timeseries_forecasting.ipynb
+++ b/01_CNN_Timeseries_forecasting.ipynb
@@ -5,7 +5,7 @@
    "id": "6b32c810",
    "metadata": {},
    "source": [
-    "# [ LG에너지솔루션 DX Intensive Course  ] 시계열 데이터 분석을 위한 딥러닝"
+    "# [ LG에너지솔루션 DX Expert 양성과정  ] 시계열 데이터 분석을 위한 딥러닝"
    ]
   },
   {
