--- a/03_STOC_Timeseries_anomalydetection.ipynb
+++ b/03_STOC_Timeseries_anomalydetection.ipynb
@@ -6,7 +6,7 @@
     "id": "w8Wr9x5Wh_GQ"
    },
    "source": [
-    "# [ LG에너지솔루션_DX_Intensive_Course  ] 시계열 데이터 분석을 위한 딥러닝"
+    "# [ LG에너지솔루션 DX Expert 양성과정  ] 시계열 데이터 분석을 위한 딥러닝"
    ]
   },
   {
