--- a/01_CNN_Timeseries_forecasting.ipynb
+++ b/01_CNN_Timeseries_forecasting.ipynb
@@ -64,6 +64,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "59ef2330",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install torchinfo"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "8af2b955",
    "metadata": {
