--- a/03_STOC_Timeseries_anomalydetection.ipynb
+++ b/03_STOC_Timeseries_anomalydetection.ipynb
@@ -102,7 +102,7 @@
    ],
    "source": [
     "# github에서 데이터 불러오기\n",
-    "!git clone https://github.com/yukyunglee/LG_ES_Transformer"
+    "!git clone https://github.com/hwk0702/LG_ES_Timeseries.git"
    ]
   },
   {
