--- a/03_STOC_Timeseries_anomalydetection.ipynb
+++ b/03_STOC_Timeseries_anomalydetection.ipynb
@@ -107,6 +107,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %cd LG_ES_Timeseries"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
