--- a/03_STOC_Timeseries_anomalydetection.ipynb
+++ b/03_STOC_Timeseries_anomalydetection.ipynb
@@ -107,15 +107,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %cd LG_ES_Timeseries"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
@@ -159,7 +150,7 @@
     "from sklearn.metrics import roc_auc_score, precision_recall_curve\n",
     "\n",
     "# from trainer import Trainer\n",
-    "from STOC.dataloader import make_matplt, get_dataloader\n",
+    "from LG_ES_Timeseries.STOC.dataloader import make_matplt, get_dataloader\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
