--- a/03_STOC_Timeseries_anomalydetection.ipynb
+++ b/03_STOC_Timeseries_anomalydetection.ipynb
@@ -218,7 +218,7 @@
    "source": [
     "# 현재 데이터는 확인 용도\n",
     "\n",
-    "data = pd.read_csv('./LG_ES_Timeseries/data/yahoo_S5/A2Benchmark/synthetic_1.csv')"
+    "data = pd.read_csv('./data/yahoo_S5/A2Benchmark/synthetic_1.csv')"
    ]
   },
   {
@@ -957,7 +957,7 @@
    "source": [
     "args = EasyDict({\n",
     "    # for dataloader \n",
-    "    'root_path':'./LG_ES_Timeseries/data/yahoo_S5/A2Benchmark/',\n",
+    "    'root_path':'./data/yahoo_S5/A2Benchmark/',\n",
     "    'data_name':'synthetic_1.csv',\n",
     "    'num_features':1,\n",
     "    'make_plot':True,\n",
@@ -1484,7 +1484,7 @@
     "# Test\n",
     "# load the checkpoint to be tested\n",
     "data_path = args.root_path + args.data_name\n",
-    "model_path = f'./LG_ES_Timeseries/saved_model/{args.experiment_name}/{data_path[3:-4]}/version-{version}/checkpoints/epoch-{best_result}.pt'\n",
+    "model_path = f'./saved_model/{args.experiment_name}/{data_path[3:-4]}/version-{version}/checkpoints/epoch-{best_result}.pt'\n",
     "ckpt = torch.load(model_path)\n",
     "\n",
     "# compute anomaly score, detect anomalies, compute performance measures, and plot the result\n",
