--- a/03_STOC_Timeseries_anomalydetection.ipynb
+++ b/03_STOC_Timeseries_anomalydetection.ipynb
@@ -102,15 +102,7 @@
    ],
    "source": [
     "# github에서 데이터 불러오기\n",
-    "!git clone https://github.com/hwk0702/LG_ES_Timeseries.git"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "!git clone https://github.com/hwk0702/LG_ES_Timeseries.git\n",
     "%cd LG_ES_Timeseries"
    ]
   },
@@ -159,7 +151,7 @@
     "from sklearn.metrics import roc_auc_score, precision_recall_curve\n",
     "\n",
     "# from trainer import Trainer\n",
-    "from LG_ES_Timeseries.STOC.dataloader import make_matplt, get_dataloader\n",
+    "from STOC.dataloader import make_matplt, get_dataloader\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
