--- a/01_CNN_Timeseries_forecasting.ipynb
+++ b/01_CNN_Timeseries_forecasting.ipynb
@@ -30,6 +30,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65f3169a",
+   "metadata": {},
+   "source": [
+    "<img src=\"./image/TCN02.png\" width=\"900\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b96b1d0f",
    "metadata": {},
    "source": [
@@ -78,8 +86,8 @@
    "id": "8af2b955",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:47:22.776819Z",
-     "start_time": "2023-06-04T13:47:21.511124Z"
+     "end_time": "2023-06-22T03:41:59.289903Z",
+     "start_time": "2023-06-22T03:41:58.105591Z"
     }
    },
    "outputs": [
@@ -95,8 +103,18 @@
     }
    ],
    "source": [
+    "import os\n",
+    "import time\n",
+    "import sys\n",
+    "from urllib import request\n",
+    "import zipfile\n",
+    "import random\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from matplotlib import pyplot as plt\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
@@ -105,14 +123,6 @@
     "from torch.utils.data import DataLoader\n",
     "from torch.nn.utils import weight_norm\n",
     "from torchinfo import summary\n",
-    "from matplotlib import pyplot as plt\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "import os\n",
-    "import time\n",
-    "import sys\n",
-    "from urllib import request\n",
-    "import zipfile\n",
-    "import random\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -130,8 +140,8 @@
    "id": "ae5b7d0b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:47:22.785552Z",
-     "start_time": "2023-06-04T13:47:22.780645Z"
+     "end_time": "2023-06-22T03:41:59.904899Z",
+     "start_time": "2023-06-22T03:41:59.893720Z"
     }
    },
    "outputs": [],
@@ -174,9 +184,9 @@
    "source": [
     "- Dataset : Jena Climate\n",
     "- Info :\n",
-    "    - recorded by the Max Planck Institute for Biogeochemistry\n",
-    "    - 14 features (temperature, pressure, humidity, etc.)\n",
-    "    - recorded once per 10 minutes\n",
+    "    - Max Planck 생지화학 연구소가 기록\n",
+    "    - 14가지 features(온도, 압력, 습도 등)\n",
+    "    - 10분당 1회 기록\n",
     "    - Location : Weather Station, Max Planck Instiute for Biogeochemistry in Jena, Germany\n",
     "    - Time-frame Considered: Jan 10, 2009 - December 31, 2016"
    ]
@@ -211,8 +221,8 @@
    "id": "00d8ad76",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:47:23.585012Z",
-     "start_time": "2023-06-04T13:47:22.787366Z"
+     "end_time": "2023-06-22T03:42:06.542454Z",
+     "start_time": "2023-06-22T03:42:05.803212Z"
     }
    },
    "outputs": [
@@ -255,8 +265,8 @@
    "id": "eae84a69",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:47:23.625270Z",
-     "start_time": "2023-06-04T13:47:23.588849Z"
+     "end_time": "2023-06-22T03:42:06.996161Z",
+     "start_time": "2023-06-22T03:42:06.973386Z"
     }
    },
    "outputs": [
@@ -447,8 +457,8 @@
    "id": "081a94de",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:47:34.803628Z",
-     "start_time": "2023-06-04T13:47:23.627084Z"
+     "end_time": "2023-06-22T03:42:19.773540Z",
+     "start_time": "2023-06-22T03:42:08.429382Z"
     }
    },
    "outputs": [
@@ -544,8 +554,8 @@
    "id": "f22fee83",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:47:35.167992Z",
-     "start_time": "2023-06-04T13:47:34.805082Z"
+     "end_time": "2023-06-22T03:42:20.247076Z",
+     "start_time": "2023-06-22T03:42:19.847178Z"
     }
    },
    "outputs": [
@@ -603,8 +613,8 @@
    "id": "d496f2b7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:47:35.173451Z",
-     "start_time": "2023-06-04T13:47:35.169641Z"
+     "end_time": "2023-06-22T03:42:20.289593Z",
+     "start_time": "2023-06-22T03:42:20.285807Z"
     }
    },
    "outputs": [],
@@ -631,12 +641,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d56ab164",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:33.641313Z",
-     "start_time": "2023-06-04T13:49:33.589667Z"
+     "end_time": "2023-06-22T03:42:20.468711Z",
+     "start_time": "2023-06-22T03:42:20.334524Z"
     }
    },
    "outputs": [
@@ -668,12 +678,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1af28e7e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:34.428902Z",
-     "start_time": "2023-06-04T13:49:34.423041Z"
+     "end_time": "2023-06-22T03:42:20.555573Z",
+     "start_time": "2023-06-22T03:42:20.542126Z"
     }
    },
    "outputs": [
@@ -691,12 +701,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "acfdb910",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:35.174711Z",
-     "start_time": "2023-06-04T13:49:35.153508Z"
+     "end_time": "2023-06-22T03:42:20.681054Z",
+     "start_time": "2023-06-22T03:42:20.637232Z"
     }
    },
    "outputs": [],
@@ -712,12 +722,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "31cb691a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:35.652939Z",
-     "start_time": "2023-06-04T13:49:35.635408Z"
+     "end_time": "2023-06-22T03:42:20.795227Z",
+     "start_time": "2023-06-22T03:42:20.787857Z"
     }
    },
    "outputs": [],
@@ -732,12 +742,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f163c244",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:41.883330Z",
-     "start_time": "2023-06-04T13:49:41.866265Z"
+     "end_time": "2023-06-22T03:42:20.913741Z",
+     "start_time": "2023-06-22T03:42:20.906477Z"
     }
    },
    "outputs": [
@@ -832,7 +842,7 @@
        "[300693 rows x 1 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,12 +853,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "0caeb6a0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:42.442297Z",
-     "start_time": "2023-06-04T13:49:42.436281Z"
+     "end_time": "2023-06-22T03:42:21.011751Z",
+     "start_time": "2023-06-22T03:42:21.007235Z"
     }
    },
    "outputs": [
@@ -866,12 +876,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "635afe1c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:43.429267Z",
-     "start_time": "2023-06-04T13:49:43.416256Z"
+     "end_time": "2023-06-22T03:42:22.839844Z",
+     "start_time": "2023-06-22T03:42:22.823564Z"
     }
    },
    "outputs": [],
@@ -900,19 +910,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "870165a0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:43.882899Z",
-     "start_time": "2023-06-04T13:49:43.799278Z"
+     "end_time": "2023-06-22T03:42:29.217193Z",
+     "start_time": "2023-06-22T03:42:29.151326Z"
     }
    },
    "outputs": [],
    "source": [
     "DataLoader_params = {'batch_size': batch_size,\n",
     "          'shuffle': True,\n",
-    "          'num_workers': 4,\n",
+    "          'num_workers': 0,\n",
     "          'pin_memory' : True\n",
     "         }\n",
     "\n",
@@ -925,12 +935,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "1f65fd7b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:47.230220Z",
-     "start_time": "2023-06-04T13:49:44.281524Z"
+     "end_time": "2023-06-22T03:42:32.840744Z",
+     "start_time": "2023-06-22T03:42:30.380980Z"
     }
    },
    "outputs": [
@@ -948,12 +958,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "278a05ae",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:47.689061Z",
-     "start_time": "2023-06-04T13:49:47.315174Z"
+     "end_time": "2023-06-22T03:42:33.474536Z",
+     "start_time": "2023-06-22T03:42:33.409852Z"
     }
    },
    "outputs": [],
@@ -997,12 +1007,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "f7c9926f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:47.786081Z",
-     "start_time": "2023-06-04T13:49:47.774746Z"
+     "end_time": "2023-06-22T03:42:42.484764Z",
+     "start_time": "2023-06-22T03:42:42.463687Z"
     }
    },
    "outputs": [],
@@ -1070,12 +1080,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "cf1a0701",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:47.913075Z",
-     "start_time": "2023-06-04T13:49:47.902725Z"
+     "end_time": "2023-06-22T03:42:43.761512Z",
+     "start_time": "2023-06-22T03:42:43.750803Z"
     }
    },
    "outputs": [],
@@ -1098,12 +1108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "d45821cc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:49.071399Z",
-     "start_time": "2023-06-04T13:49:49.058241Z"
+     "end_time": "2023-06-22T03:42:50.175583Z",
+     "start_time": "2023-06-22T03:42:50.160666Z"
     }
    },
    "outputs": [],
@@ -1113,12 +1123,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
+   "id": "da92a4e4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-06-22T03:42:50.945463Z",
+     "start_time": "2023-06-22T03:42:50.938211Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TCN(\n",
+       "  (tcn): TemporalConvNet(\n",
+       "    (network): Sequential(\n",
+       "      (0): TemporalBlock(\n",
+       "        (conv1): Conv1d(7, 32, kernel_size=(2,), stride=(1,), padding=(1,))\n",
+       "        (chomp1): Chomp1d()\n",
+       "        (relu1): ReLU()\n",
+       "        (dropout1): Dropout(p=0.2, inplace=False)\n",
+       "        (conv2): Conv1d(32, 32, kernel_size=(2,), stride=(1,), padding=(1,))\n",
+       "        (chomp2): Chomp1d()\n",
+       "        (relu2): ReLU()\n",
+       "        (dropout2): Dropout(p=0.2, inplace=False)\n",
+       "        (net): Sequential(\n",
+       "          (0): Conv1d(7, 32, kernel_size=(2,), stride=(1,), padding=(1,))\n",
+       "          (1): Chomp1d()\n",
+       "          (2): ReLU()\n",
+       "          (3): Dropout(p=0.2, inplace=False)\n",
+       "          (4): Conv1d(32, 32, kernel_size=(2,), stride=(1,), padding=(1,))\n",
+       "          (5): Chomp1d()\n",
+       "          (6): ReLU()\n",
+       "          (7): Dropout(p=0.2, inplace=False)\n",
+       "        )\n",
+       "        (downsample): Conv1d(7, 32, kernel_size=(1,), stride=(1,))\n",
+       "        (relu): ReLU()\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (linear): Linear(in_features=32, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "7df53298",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:49.415083Z",
-     "start_time": "2023-06-04T13:49:49.390944Z"
+     "end_time": "2023-06-22T03:42:53.442267Z",
+     "start_time": "2023-06-22T03:42:53.420360Z"
     }
    },
    "outputs": [
@@ -1146,7 +1210,7 @@
        "=========================================================================================="
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,12 +1221,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "5a9451dc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:51.028047Z",
-     "start_time": "2023-06-04T13:49:51.024645Z"
+     "end_time": "2023-06-22T03:42:54.811219Z",
+     "start_time": "2023-06-22T03:42:54.806093Z"
     }
    },
    "outputs": [],
@@ -1173,12 +1237,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "e477c0f4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:51.588026Z",
-     "start_time": "2023-06-04T13:49:51.566598Z"
+     "end_time": "2023-06-22T03:42:56.046348Z",
+     "start_time": "2023-06-22T03:42:56.036081Z"
     }
    },
    "outputs": [],
@@ -1225,12 +1289,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "4fb0e82d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:52.165302Z",
-     "start_time": "2023-06-04T13:49:52.143524Z"
+     "end_time": "2023-06-22T03:43:22.654991Z",
+     "start_time": "2023-06-22T03:43:22.637087Z"
     }
    },
    "outputs": [],
@@ -1257,21 +1321,11 @@
     "        input = x.to(device).float()\n",
     "        target = y.to(device).float()\n",
     "\n",
-    "        with torch.cuda.amp.autocast(enabled=use_fp16):\n",
-    "            predictions = model(input)\n",
-    "            train_loss = loss_fn(predictions, target)\n",
-    "        if use_fp16:\n",
-    "            scaler.scale(train_loss).backward()\n",
-    "            if max_norm is not None:\n",
-    "                scaler.unscale_(optimizer)\n",
-    "                torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm)\n",
-    "            scaler.step(optimizer)\n",
-    "            scaler.update()\n",
-    "        else:\n",
-    "            train_loss.backward()\n",
-    "            if max_norm is not None:\n",
-    "                torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm)\n",
-    "            optimizer.step()\n",
+    "        predictions = model(input)\n",
+    "        train_loss = loss_fn(predictions, target)\n",
+    "\n",
+    "        train_loss.backward()\n",
+    "        optimizer.step()\n",
     "\n",
     "        losses.update(train_loss.item(), input.size(0))\n",
     "        # measure elapsed time\n",
@@ -1286,12 +1340,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "ae273c17",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:52.676963Z",
-     "start_time": "2023-06-04T13:49:52.666581Z"
+     "end_time": "2023-06-22T03:43:28.707971Z",
+     "start_time": "2023-06-22T03:43:28.703883Z"
     }
    },
    "outputs": [],
@@ -1315,12 +1369,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "74a99687",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:49:53.127829Z",
-     "start_time": "2023-06-04T13:49:53.117560Z"
+     "end_time": "2023-06-22T03:43:33.613687Z",
+     "start_time": "2023-06-22T03:43:33.608878Z"
     }
    },
    "outputs": [],
@@ -1353,12 +1407,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "5e310363",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:53:39.588839Z",
-     "start_time": "2023-06-04T13:49:53.644835Z"
+     "end_time": "2023-06-22T03:54:54.771342Z",
+     "start_time": "2023-06-22T03:43:39.357506Z"
     }
    },
    "outputs": [
@@ -1376,8 +1430,8 @@
       "[Train] Epoch :  8   Train Loss: 0.005037  Valid Loss: 0.005038\n",
       "[Train] Epoch :  9   Train Loss: 0.005  Valid Loss: 0.00498\n",
       "[Train] Epoch : 10   Train Loss: 0.004971  Valid Loss: 0.005025\n",
-      "CPU times: user 3min 16s, sys: 16.7 s, total: 3min 33s\n",
-      "Wall time: 3min 45s\n"
+      "CPU times: user 48min 26s, sys: 2.28 s, total: 48min 28s\n",
+      "Wall time: 11min 15s\n"
      ]
     }
    ],
@@ -1410,12 +1464,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "c3fbe06f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:53:39.845239Z",
-     "start_time": "2023-06-04T13:53:39.710578Z"
+     "end_time": "2023-06-22T03:54:55.006813Z",
+     "start_time": "2023-06-22T03:54:54.866073Z"
     }
    },
    "outputs": [
@@ -1453,12 +1507,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "cabf3829",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-04T13:53:41.181245Z",
-     "start_time": "2023-06-04T13:53:39.991223Z"
+     "end_time": "2023-06-22T03:54:56.178380Z",
+     "start_time": "2023-06-22T03:54:55.109589Z"
     }
    },
    "outputs": [
