--- a/03_STOC_Timeseries_anomalydetection.ipynb
+++ b/03_STOC_Timeseries_anomalydetection.ipynb
@@ -32,6 +32,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./image/STOC02.png\" width=\"900\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "s3JoS-xWh_GS"
    },
@@ -108,6 +115,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install torch==1.11.0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
@@ -151,7 +167,7 @@
     "from sklearn.metrics import roc_auc_score, precision_recall_curve\n",
     "\n",
     "# from trainer import Trainer\n",
-    "from STOC.dataloader import make_matplt, get_dataloader\n",
+    "from LG_ES_Timeseries.STOC.dataloader import make_matplt, get_dataloader\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
