--- a/01_CNN_Timeseries_forecasting.ipynb
+++ b/01_CNN_Timeseries_forecasting.ipynb
@@ -25,15 +25,24 @@
     "강의자료 : 시계열 분석을 위한 딥러닝, 01 CNN 기반의 시계열 데이터 분석\n",
     "\n",
     "- 합성곱 신경망 Convolutional Neural Network(CNN) : 합성곱 연산을 통해 이미지로부터 필요한 특질을 스스로 학습할 수 있는 능력을 갖춘 심층 신경망 구조\n",
-    "- 1-D Convolution : 시계열 데이터는 이미지 데이터와는 달리 변수들 사이의 Spatial Correlation이 존재하지 않는다. 1-D Convolution은 모든 변수를 한번에 고려하여 시간 축에 대해서만 Convolution 연산을 수행한다."
+    "- 1-D Convolution : 시계열 데이터는 이미지 데이터와는 달리 변수들 사이의 Spatial Correlation이 존재하지 않는다. 1-D Convolution은 모든 변수를 한번에 고려하여 시간 축에 대해서만 Convolution 연산을 수행한다.\n",
+    "- 시계열 예측 : 일부 기간 데이터를 입력으로 하여 이후 기간 데이터를 예측"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "65f3169a",
+   "id": "ba4f1ce4",
    "metadata": {},
    "source": [
     "<img src=\"./image/TCN02.png\" width=\"900\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75cf8b5f",
+   "metadata": {},
+   "source": [
+    "<img src=\"./image/TCN03.png\" width=\"900\">"
    ]
   },
   {
@@ -1124,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "da92a4e4",
+   "id": "88169f5a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-22T03:42:50.945463Z",
