--- a/01_CNN_Timeseries_forecasting.ipynb
+++ b/01_CNN_Timeseries_forecasting.ipynb
@@ -554,9 +554,9 @@
     "    )\n",
     "    for i in range(len(feature_keys)):\n",
     "        key = feature_keys[i]\n",
-    "        c = colors[i % (len(colors))]\n",
     "        t_data = data[key]\n",
     "        t_data.index = time_data\n",
+    "        c = colors[i % (len(colors))]\n",
     "        ax = t_data.plot(\n",
     "            ax=axes[i // 2, i % 2],\n",
     "            color=c,\n",
@@ -1474,7 +1474,7 @@
     "여러번 EPOCH을 통해 학습 진행하기\n",
     "'''\n",
     "for epoch in range(1, epochs+1):\n",
-    "    epoch_loss = train(model, train_loader, optimizer, loss_fn, use_fp16=False)\n",
+    "    epoch_loss = train(model, train_loader, optimizer, loss_fn)\n",
     "    val_loss = validation(model, val_loader, loss_fn)\n",
     "\n",
     "    history.setdefault('loss', []).append(epoch_loss)\n",
